--- a/SailScores.Web/Views/Race/Create.cshtml
+++ b/SailScores.Web/Views/Race/Create.cshtml
@@ -48,6 +48,7 @@
         <input type="hidden" id="cloudCover" asp-for="Weather.CloudCoverPercent" />
         <input type="hidden" id="humidity" asp-for="Weather.Humidity" />
         <input type="hidden" id="needsLocalDate" asp-for="NeedsLocalDate" />
+        <input type="hidden" id="defaultRaceDateOffset" asp-for="DefaultRaceDateOffset" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="mb-3 row">
             <div class="col-md-6">
