Updates news for prod deployment
Adds news items describing recent styling refresh and
scorekeeper features.

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -54,6 +54,37 @@
         <script type="text/javascript">(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; fnames[6] = 'MMERGE6'; ftypes[6] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
     </div>
     <hr />
+    <h3>May 18th, 2025</h3>
+    <h5>Something feels different</h5>
+    <p>
+        A few changes went live today. The biggest of these is a refresh of the site&rsquo;s styling. The old styling was working
+        pretty well, so we&rsquo;ve tried to stay close to that. But the new version has been tidied up a bit and should
+        be easier to use on both small screens and large.
+        This update affects all corners of the site and we&rsquo;ve tested it thoroughly, but
+        please <a href="mailto:info@sailscores.com">let us know</a>
+        if you see anything that looks wrong.
+    </p>
+    <p>
+        The other changes should make scorekeepers&rsquo; jobs easier:
+        <ul>
+            <li>Competitors can now quickly be set to active or inactive from the competitor list.</li>
+            <li>Clubs now have a setting for "Default Race Date." If scores are usually entered a day after the races, this setting can keep SailScores
+                from trying to add the current date and weather conditions.</li>
+            <li>For a week before and after the event, regattas still show up on the front page of SailScores by default. But there is now
+                a new setting that will keep it out of the front page list. This
+                should help those testing out the regatta functionality.</li>
+        </ul>
+        </p>
+    <br />
+    <h3>January 23rd, 2025</h3>
+    <h5>Racing Rules of Sailing 2025-2028</h5>
+    <p>
+        In addition to some minor changes to a few scoring codes, RRS 2025-2028 also includes a change to how scoring
+        penalties are calculated. A Scoring Penalty should now be rounded to a single decimal place, like other calculated scores.
+        Previously, penalties were rounded to the nearest whole number. The default scoring system in SailScores has been updated
+        to comply with the new rules. There are also base systems added for those who need to use the pre-2025 scoring systems.
+    </p>
+    <br />
     <h3>February 12th, 2025</h3>
     <h5>Formatting tweak</h5>
     <p>
