Adds competitor participation history
Implements a feature to track and display a competitor's participation history.
The history is aggregated monthly and displayed on the competitor's edit page.

--- a/SailScores.Web/Views/Competitor/Edit.cshtml
+++ b/SailScores.Web/Views/Competitor/Edit.cshtml
@@ -107,15 +107,30 @@
         <em>Experimental</em>
         <table class="table table-striped table-sm">
             <tbody>
-                @if(Model.ChangeHistory != null) {
-                @foreach (var history in Model.ChangeHistory) {
+                @if(Model.CombinedHistory != null) {
+                @foreach (var history in Model.CombinedHistory) {
                     <tr>
-                        <td>@history.ChangeTimeStamp</td>
-                        <td>@history.Summary
-                            @if (!String.IsNullOrWhiteSpace(history.NewValue)) {
-                                @(" to " + history.NewValue)
+                        <td>
+                            @{
+                                // Display date based on aggregation type
+                                switch (history.Aggregation)
+                                {
+                                    case SailScores.Core.Model.HistoricalNoteAggregation.Year:
+                                        @history.Date.ToString("yyyy")
+                                        break;
+                                    case SailScores.Core.Model.HistoricalNoteAggregation.Month:
+                                        @history.Date.ToString("yyyy-MM")
+                                        break;
+                                    case SailScores.Core.Model.HistoricalNoteAggregation.Day:
+                                        @history.Date.ToString("yyyy-MM-dd")
+                                        break;
+                                    default:
+                                        @history.Date.ToString("g")
+                                        break;
+                                }
                             }
                         </td>
+                        <td>@history.Summary</td>
                         <td>@history.ChangedBy</td>
                     </tr>
                     }
