--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -95,7 +95,7 @@
         <tr>
             <th scope="col">Place</th>
             <th scope="col">Sail</th>
-            <th scope="col">Sailor</th>
+            <th scope="col">Sailor(s)</th>
             <th scope="col">Boat</th>
         </tr>
         </thead>
