WIP: Display summary series in list

--- a/SailScores.Web/Views/Series/EditSummarySeries.cshtml
+++ b/SailScores.Web/Views/Series/EditSummarySeries.cshtml
@@ -45,7 +45,7 @@
                     <input class="form-check-input" asp-for="ChildrenSeriesAsSingleRace" />
                     <label class="form-check-label">
                         Children series count as a single race</label>
-                    <span class="small">If not checked, all races will be counted in this series as individual races.</span>
+                    <span class="small"><br />If not checked, all races will be counted in this series as individual races.</span>
                 </div>
             </div>
             <div class="mb-3">
