Remove newsletter option from account signup

--- a/SailScores.Web/Views/Account/Register.cshtml
+++ b/SailScores.Web/Views/Account/Register.cshtml
@@ -52,7 +52,7 @@
                     <a asp-controller="Home" asp-action="Privacy">Privacy Policy</a> for details.
                 </div>
             </div>
-            <div class="mb-3 form-check">
+@*             <div class="mb-3 form-check">
                 <input asp-for="NewsletterSubscribe" class="form-check-input" />
                 <label asp-for="NewsletterSubscribe" class="form-check-label"></label>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
@@ -61,7 +61,7 @@
                     with feature updates and tips on usage. While the mailing list is hosted by Mailchimp,
                     we don't share data with other third parties.
                 </div>
-            </div>
+            </div> *@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
