--- a/SailScores.Web/Views/Series/EditSummarySeries.cshtml
+++ b/SailScores.Web/Views/Series/EditSummarySeries.cshtml
@@ -44,7 +44,7 @@
                 <div class="form-check">
                     <input class="form-check-input" asp-for="ChildrenSeriesAsSingleRace" />
                     <label class="form-check-label">
-                        Children series count as a single race</label>
+                        Children series each count as a single race</label>
                     <span class="small"><br />If not checked, all races will be counted in this series as individual races.</span>
                 </div>
             </div>
