--- a/SailScores.Web/Views/Series/Create.cshtml
+++ b/SailScores.Web/Views/Series/Create.cshtml
@@ -43,14 +43,21 @@
                 </select>
                 <span asp-validation-for="SeasonId" class="text-danger"></span>
             </div>
-            <div class="mb-3">
-                <label asp-for="Type">Series Type</label>
-                <select id="Type" asp-for="Type" class="form-select">
-                    <option value="1">Standard</option>
-                    <option value="3">Summary Series</option>
-                </select>
-                <span asp-validation-for="Type" class="text-danger"></span>
-            </div>
+            @if (Model.UseExperimentalFeatures)
+            {
+                <div class="mb-3">
+                    <label asp-for="Type">Series Type</label>
+                    <select id="Type" asp-for="Type" class="form-select">
+                        <option value="1">Standard</option>
+                        <option value="3">Summary Series</option>
+                    </select>
+                    <span asp-validation-for="Type" class="text-danger"></span>
+                </div>
+            }
+            else
+            {
+                <input type="hidden" asp-for="Type" value="1" />
+            }
             <div id="summarySeriesNote" class="alert alert-info" style="display:none;">
                 After saving, you will be redirected to the Edit page where you can select the Children series.
             </div>
