--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -6,7 +6,7 @@
 @using SailScores.Web.Services
 @using SailScores.Web.Services.Interfaces
 
-@inject IStringLocalizer<SharedResource> localizer
+@inject ILocalizerService localizer
 @inject IWeatherService weatherService
 
 @model ResultsTableViewModel
@@ -63,16 +63,16 @@
                             <th class="text-center d-none d-sm-table-cell" scope="col">
                                 @if (Model.IsExport)
                                 {
-                                    @race.ShortName
+                                    @localizer.GetShortName(race)
                                 }
                                 else
                                 {
                                     if(race.IsSeries ?? false)
                                     {
-                                        <a href="~/@ViewContext.RouteData.Values["ClubInitials"]/@race.seriesUrlName">@race.ShortName</a>
+                                        <a href="~/@ViewContext.RouteData.Values["ClubInitials"]/@race.seriesUrlName">@localizer.GetShortName(race)</a>
                                     } else {
                                     @Html.ActionLink(
-                                                 @race.ShortName
+                                                 @localizer.GetShortName(race)
                                                  , "Details", "Race", new { id = race.Id })
                                     }
                                     <div class="weather">
@@ -101,18 +101,18 @@
                             <th class="text-center" scope="col">
                                 @if (Model.IsExport)
                                 {
-                                    @race.ShortName
+                    @localizer.GetShortName(race)
                                 }
                                 else
                                 {
                                     if (race.IsSeries ?? false)
                                     {
-                                        <a href="~/@ViewContext.RouteData.Values["ClubInitials"]/@race.seriesUrlName">@race.ShortName</a>
+                                        <a href="~/@ViewContext.RouteData.Values["ClubInitials"]/@race.seriesUrlName">@localizer.GetShortName(race)</a>
                                     }
                                     else
                                     {
                                         @Html.ActionLink(
-                                        @race.ShortName
+                                        @localizer.GetShortName(race)
                                         , "Details", "Race", new { id = race.Id })
                                     }
                                     <br />
@@ -276,7 +276,7 @@
                             if (firstRow)
                             {
                                     <td rowspan="@(Model.Results?.Competitors?.Count() ?? 1)" class="abandoned d-none d-sm-table-cell">
-                                    <span>ABANDONED</span>
+                                    <span>@localizer["Abandoned"].ToUpper()</span>
                                 </td>
                             }
                         }
@@ -285,7 +285,7 @@
                             if (firstRow)
                             {
                                     <td rowspan="@(Model.Results?.Competitors?.Count() ?? 1)" class="scheduled d-none d-sm-table-cell">
-                                    <span>SCHEDULED</span>
+                                        <span>@localizer["Scheduled"].ToUpper()</span>
                                 </td>
                             }
                         }
