--- a/SailScores.Web/Views/Club/Index.cshtml
+++ b/SailScores.Web/Views/Club/Index.cshtml
@@ -17,6 +17,7 @@
 <div class="row">
     <div class="col-12">
         <h1 class="display-4">@Model.Name</h1>
+<h3 class="text-center">@System.Globalization.CultureInfo.CurrentUICulture.NativeName</h3>
     </div>
 </div>
 @if (!String.IsNullOrWhiteSpace(Model.Url))
