Fix for competitor merges when Summary Series are involved.

--- a/SailScores.Web/Views/MergeCompetitor/SelectSource.cshtml
+++ b/SailScores.Web/Views/MergeCompetitor/SelectSource.cshtml
@@ -19,8 +19,9 @@
 <div class="row">
     <div class="col-12">
         <br />
-        Choose the source competitor for the merge. The race results of this competitor will be added to the 
-        target competitor. Then this source competitor will be removed.
+        <p>Choose the source competitor for the merge. The race results of this competitor will be added to the 
+        target competitor. Then this source competitor will be removed.</p>
+        <div class="alert alert-info">Competitors are included in the list below if they are not scored in any of the same races as the target competitor.</div>
     </div>
 </div>
 <div class="row">
